<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_add_edit_screen"
    android:focusableInTouchMode="true"
    android:focusedByDefault="true"
    android:padding="16dp"
    tools:context=".ui.AddEditMemoryView">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_line_0.02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_line_0.25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_line_0.75"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_line_0.9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.90" />

    <TextView
        android:id="@+id/text_view_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_save"
        android:text="@string/cancel"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@id/guide_line_0.02"
        app:layout_constraintEnd_toStartOf="@id/text_view_save"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:layout_marginBottom="8dp"
        android:id="@+id/text_view_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_save"
        android:text="@string/save"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@id/guide_line_0.02"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/guide_line_0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guide_line_0.02">

        <EditText
            android:maxLines="2"
            android:id="@+id/edit_text_memory_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_memory"
            android:textColor="@color/colorText" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_marginTop="16dp"
        android:id="@+id/recycler_view_photos"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/bg_photo_recycler_view"
        android:padding="1dp"
        android:scrollbars="horizontal"
        app:layout_constraintBottom_toTopOf="@id/guide_line_0.75"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guide_line_0.25"
        tools:listitem="@layout/photos_list_item" />

    <ImageView
        android:id="@+id/image_view_take_photo"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/content_desc_camera"
        android:src="@drawable/ic_camera"
        app:layout_constraintBottom_toTopOf="@id/guide_line_0.9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_view_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/colorAccent"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guide_line_0.9" />

</androidx.constraintlayout.widget.ConstraintLayout>