<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="8dp"
    android:elevation="0dp"
    android:foreground="@drawable/foreground_memory_item_card_view"
    app:cardBackgroundColor="@android:color/transparent"
    app:cardCornerRadius="20dp"
    app:cardMaxElevation="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_line_15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.15" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_line_25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.25" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_line_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_line_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_line_75"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.95" />

        <TextView
            android:id="@+id/text_view_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="swipe to delete"
            app:drawableStartCompat="@drawable/ic_info"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="4dp" />

        <TextView
            android:id="@+id/text_view_memory_desc"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:fontFamily="casual"
            android:gravity="center"
            android:scrollbars="vertical"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/guide_line_15"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_view_info" />

        <TextView
            android:id="@+id/text_view_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_date_text_view"
            android:drawablePadding="8dp"
            android:paddingStart="16dp"
            android:paddingTop="8dp"
            android:paddingEnd="16dp"
            android:paddingBottom="8dp"
            android:text="@string/created"
            android:textColor="#000051"
            android:textStyle="italic"
            app:drawableStartCompat="@drawable/ic_date"
            app:layout_constraintBottom_toBottomOf="@id/guide_line_25"
            app:layout_constraintStart_toStartOf="@id/guide_line_start"
            app:layout_constraintTop_toTopOf="@id/guide_line_15" />

        <androidx.cardview.widget.CardView

            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:elevation="0dp"
            android:foreground="@drawable/foreground_photo_card_view"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardCornerRadius="20dp"
            app:cardMaxElevation="0dp"
            app:layout_constraintBottom_toBottomOf="@id/guide_line_75"
            app:layout_constraintEnd_toEndOf="@id/guide_line_end"
            app:layout_constraintStart_toStartOf="@id/guide_line_start"
            app:layout_constraintTop_toTopOf="@id/guide_line_25">

            <ImageView
                android:id="@+id/image_view_memory_photo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/content_desc_default_memory_photo"
                android:scaleType="fitXY"
                android:src="@drawable/ic_memory_photo" />
        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/image_view_prev"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:contentDescription="@string/content_desc_previous"
            android:elevation="2dp"
            android:src="@drawable/ic_prev"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@id/guide_line_75"
            app:layout_constraintStart_toStartOf="@id/guide_line_start"
            app:layout_constraintTop_toTopOf="@id/guide_line_25" />

        <ImageView
            android:id="@+id/image_view_next"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:contentDescription="@string/content_desc_Next"
            android:elevation="2dp"
            android:src="@drawable/ic_next"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@id/guide_line_75"
            app:layout_constraintEnd_toEndOf="@id/guide_line_end"
            app:layout_constraintTop_toTopOf="@id/guide_line_25" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>